# News-Aggregator

./: Dockerfile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/management/commands/: fetch_news.py
core/scraper/: __init__.py  base.py  onion.py
core/static/css/: styles.css
core/templates/core/: article_detail.html  base.html  index.html  sources.html
core/tests/: __init__.py  test_models.py
