[project]
name = "news-aggregator"
version = "0.1.0"
description = "Django-based news aggregator with pluggable scrapers"
authors = [{ name = "Mobin Yousefi", email = "" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"